Fix text justification on mobile

--- a/_harp/assets/css/main.scss
+++ b/_harp/assets/css/main.scss
@@ -220,6 +220,9 @@ main {
 		padding: 0 2rem;
 	}
 
+	p:not(.blurb) {
+		word-spacing: -5px;
+	}
 }
 
 section {
